# direct_bt

./: .clang-format  .clang-tidy  .clangd  .classpath  .cproject  .gitignore  .gitmodules  .project  CHANGES.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  Doxyfile.cpp.in  Doxyfile.java.in  PLATFORMS.md  README.md  TROUBLESHOOTING.md
examples/: CMakeLists.txt  dbt_constants.hpp  dbt_labpadclient01.cpp  dbt_peripheral00.cpp  dbt_readsmpkey.cpp  dbt_repeater00.cpp  dbt_scanner00.cpp  dbt_scanner01.cpp  dbt_scanner10.cpp  dbt_test_gattcharlifecycle01.cpp
examples/direct_bt_peripheral00/: dbt_peripheral00.cpp
examples/direct_bt_scanner00/: dbt_scanner00.cpp
examples/direct_bt_scanner01/: dbt_scanner01.cpp
examples/direct_bt_scanner10/: dbt_scanner10.cpp
examples/java/: AsyncTinyB.java  CMakeLists.txt  DBTConstants.java  DBTLabPadClient01.java  DBTPeripheral00.java  DBTScanner10.java  HelloTinyB.java  Notification.java  ScannerTinyB00.java  ScannerTinyB01.java  ScannerTinyB02.java  ScannerTinyB10.java
examples/tinyb/: esstinyb.cpp  list_mfg.cpp
jaucpp/: CMakeLists.txt  Doxyfile.cpp.in  README.md
jaucpp/cmake/modules/: version.cpp.in
jaucpp/include/cppunit/: cppunit.h
jaucpp/include/jau/: basic_algos.hpp  basic_types.hpp  cow_vector.hpp  debug.hpp  dfa_utf8_decode.hpp  environment.hpp  function_def.hpp  java_uplink.hpp  ordered_atomic.hpp  ringbuffer.hpp  ringbuffer_if.hpp  version.hpp
jaucpp/java/jni/: helper_jni.cxx  jni_mem.cxx
jaucpp/scripts/: build-doc.sh  build.sh  rebuild.sh
jaucpp/src/: CMakeLists.txt  basic_types.cpp  debug.cpp  dfa_utf8_decode.cpp  environment.cpp
jaucpp/test/: CMakeLists.txt  test_basictypes01.cpp  test_functiondef01.cpp  test_lfringbuffer01.cpp  test_lfringbuffer11.cpp  test_mm_sc_drf_00.cpp  test_mm_sc_drf_01.cpp
java/: CMakeLists.txt  manifest.txt.in
java/direct_bt/tinyb/: DBTAdapter.java  DBTDevice.java  DBTGattCharacteristic.java  DBTGattService.java  DBTManager.java  DBTNativeDownlink.java
java/jau/direct_bt/: DBTAdapter.java  DBTDevice.java  DBTEvent.java  DBTGattChar.java  DBTGattCharacteristic.java  DBTGattDesc.java  DBTGattDescriptor.java  DBTGattService.java  DBTManager.java  DBTNativeDownlink.java  DBTObject.java
java/jni/: BTFactory.cxx  BTUtils.cxx  BluetoothFactory.cxx  BluetoothUtils.cxx  JNIMem.cxx  JNIMem.hpp  helper_base.cxx  helper_base.hpp
java/jni/direct_bt/: BTFactory.cxx  BTUtils.cxx  CMakeLists.txt  DBGattServer.cxx  DBTAdapter.cxx  DBTDevice.cxx  DBTEvent.cxx  DBTGattChar.cxx  DBTGattCharacteristic.cxx  DBTGattDesc.cxx  DBTGattDescriptor.cxx  DBTGattService.cxx  DBTManager.cxx  DBTNativeDownlink.cxx  DBTObject.cxx  EInfoReport.cxx  helper_dbt.cxx  helper_dbt.hpp
java/jni/tinyb/: CMakeLists.txt  DBusAdapter.cxx  DBusDevice.cxx  DBusGattCharacteristic.cxx  DBusGattDescriptor.cxx  DBusGattService.cxx  DBusManager.cxx  DBusObject.cxx  helper_tinyb.cxx  helper_tinyb.hpp
java/org/direct_bt/: AdapterSettings.java  AdapterStatusListener.java  BDAddressAndType.java  BDAddressType.java  BLERandomAddressType.java  BTAdapter.java  BTCallback.java  BTDevice.java  BTDeviceRegistry.java  BTEvent.java  BTException.java  BTFactory.java  BTGattChar.java  BTGattCharListener.java  BTGattCmd.java  BTGattDesc.java  BTGattService.java  BTManager.java  BTMode.java  BTNotification.java  BTObject.java  BTRole.java  BTSecurityLevel.java  BTSecurityRegistry.java  BTType.java  BTUtils.java  BluetoothAdapter.java  BluetoothCallback.java  BluetoothDevice.java  BluetoothEvent.java  BluetoothException.java  BluetoothFactory.java  BluetoothGattCharacteristic.java  BluetoothGattDescriptor.java  BluetoothGattService.java  BluetoothManager.java  BluetoothNotification.java  BluetoothObject.java  BluetoothType.java  BluetoothUtils.java  (+35 more)
java/org/tinyb/: AdapterSettings.java  AdapterStatusListener.java  BDAddressAndType.java  BDAddressType.java  BLERandomAddressType.java  BTSecurityLevel.java  BluetoothAdapter.java  BluetoothAddressType.java  BluetoothDevice.java  BluetoothFactory.java  BluetoothManager.java  BluetoothUtils.java  EUI48.java  HCIStatusCode.java  ObjectArgCallback.java  PairingMode.java  SMPIOCapability.java  SMPLongTermKeyInfo.java  SMPPairingState.java  ScanType.java
java/tinyb/dbus/: DBusAdapter.java  DBusBluetoothException.java  (+7 more)
java_fat/: CMakeLists.txt  manifest-fat.txt.in  manifest-fat2.txt.in  manifest.txt.in
src/direct_bt/: ATTPDUTypes.cpp  BTAdapter.cpp  BTDevice.cpp  BTDeviceRegistry.cpp  BTGattChar.cpp  BTGattCmd.cpp  BTGattDesc.cpp  BTGattHandler.cpp  BTGattServerHandler.cpp  BTGattService.cpp  BTManager.cpp  BTSecurityRegistry.cpp  BTTypes.cpp  BTTypes0.cpp  BTTypes1.cpp  BasicTypes.cpp  CMakeLists.txt  DBGattServer.cpp  DBTAdapter.cpp  DBTDevice.cpp  DBTEnv.cpp  DBTManager.cpp  DBTTypes.cpp  GATTCharacteristic.cpp  GATTDescriptor.cpp  GATTHandler.cpp  GATTNumbers.cpp  GATTService.cpp  HCIComm.cpp  HCIHandler.cpp  HCITypes.cpp  L2CAPComm.cpp  MgmtTypes.cpp  SMPCrypto.cpp  SMPHandler.cpp  SMPKeyBin.cpp  SMPTypes.cpp  UUID.cpp  dbt_debug.cpp  direct_bt.pc.cmake
test/direct_bt/: CMakeLists.txt  test_adeir01.cpp  test_attpdu01.cpp  test_basictypes01.cpp  test_bringup00.cpp  test_btaddress01.cpp  test_lfringbuffer11.cpp  test_misc_types.cpp  test_mm_sc_drf.cpp  test_mm_sc_drf_00.cpp  test_mm_sc_drf_01.cpp  test_uuid.cpp
test/ieee11073/: CMakeLists.txt  test_datatypes01.cpp  test_ieee11073_01.cpp
test/java/: CMakeLists.txt  manifest.txt.in
trial/direct_bt/: CMakeLists.txt  dbt_base_client_server.hpp  dbt_client00.hpp  dbt_client01.hpp  dbt_client_server1x.hpp  dbt_client_test.hpp  dbt_constants.hpp  dbt_endpoint.hpp  dbt_server00.hpp  dbt_server01.hpp  dbt_server_test.hpp  dbt_utils.hpp  provoke_client_server_i470.cpp  test_client_server00.cpp  test_client_server01_NoEnc.cpp  test_client_server10_NoEnc.cpp  test_client_server12_NoEnc.cpp  test_client_server20_SC0.cpp  test_client_server22_SC0.cpp  test_client_server30_SC1.cpp  test_client_server32_SC1.cpp  test_client_server40_reset.cpp  test_provoke_client_server_i470.cpp
trial/java/: CMakeLists.txt  manifest.txt.in
(+180 files in other folders)
